--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,13 +1,27 @@
 ---
 interface Props {
-  title: string;
+  titleEs: string;
+  titleEn: string;
   company: string;
-  description: string;
+  descriptionEs: string;
+  descriptionEn: string;
   link?: string;
-  date: string;
+  dateEs: string;
+  dateEn: string;
+  location?: string;
 }
 
-const { title, company, description, link, date } = Astro.props;
+const {
+  titleEs,
+  titleEn,
+  company,
+  descriptionEs,
+  descriptionEn,
+  link,
+  dateEs,
+  dateEn,
+  location,
+} = Astro.props;
 ---
 
 <div
@@ -19,19 +33,27 @@ const { title, company, description, link, date } = Astro.props;
         >&bull;</span
       >
 
-      <h3 class="text-xl font-bold text-blue-300 whitespace-pre-line">{title}</h3>
+      <h3 class="text-xl font-bold text-blue-300 whitespace-pre-line">
+        <span class="i18n-es">{titleEs}</span>
+        <span class="i18n-en">{titleEn}</span>
+      </h3>
       <h4 class="font-semibold text-xl text-white-600 dark:text-white">
         {company}
       </h4>
-      <time class="p-0 m-0 text-sm text-white-600/80 dark:text-white/80"
-        >{date}</time
-      >
+      {location && (
+        <p class="text-sm text-white-600/80 dark:text-white/80">{location}</p>
+      )}
+      <time class="p-0 m-0 text-sm text-white-600/80 dark:text-white/80">
+        <span class="i18n-es">{dateEs}</span>
+        <span class="i18n-en">{dateEn}</span>
+      </time>
     </div>
   </div>
   <div
-    class="relative flex flex-col gap-2 pb-4 text-white-600 dark:text-white-300 md:col-span-3"
+    class="relative flex flex-col gap-2 pb-4 px-4 py-4 text-white-600 dark:text-white-300 md:col-span-3 rounded-xl border border-white/5 bg-slate-900/40 shadow-[0_18px_45px_rgba(15,23,42,0.65)] transition-transform transition-shadow duration-300 hover:-translate-y-1 hover:shadow-[0_24px_70px_rgba(15,23,42,0.9)]"
   >
-    {description}
+    <p class="i18n-es">{descriptionEs}</p>
+    <p class="i18n-en">{descriptionEn}</p>
     {
       link && (
         <a href={link} target="_blank" class="text-blue-500 underline">
